# lang-graph

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.claude/: settings.local.json
scripts/: download_model.py  embed_documents.py
src/: __init__.py  chatbot.py  graph.py
src/config/: config.py
src/nodes/: __init__.py  input_processor.py  model.py  retriever.py  router.py  tools_executor.py
src/prompts/: agent.py
src/states/: __init__.py  chatbot.py
src/tools/: __init__.py  calculator.py  retriever.py  weather.py
src/utils/: __init__.py  docker.py  llm.py
