[project]
name = "lang-graph"
version = "0.1.0"
description = "LangGraph sample project"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "langgraph==1.0.7",
    "langgraph-cli[inmem]==0.4.12",
    "langgraph-api==0.7.22",
    "langchain==1.2.8",
    "langchain-ollama==1.0.1",
    "python-dotenv==1.2.1",
    "pip==26.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true