[project]
name = "lang-graph"
version = "0.1.0"
description = "LangGraph sample project"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "langgraph==1.0.7",
    "langgraph-cli[inmem]==0.4.12",
    "langgraph-api==0.7.22",
    "langchain==1.2.8",
    "langchain-core==1.2.8",
    "langchain-ollama==1.0.1",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.0",
    "langchain-elasticsearch==1.0.0",
    "elasticsearch==8.19.3",
    "python-dotenv==1.2.1",
    "pip==26.0.1",
    "rich==14.3.2",
    "requests==2.32.5",
    "pypdf==6.6.2",
    "python-magic==0.4.27",
    "python-docx==1.1.2",
    "docx2txt==0.8",
    "psutil==6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true